--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">CaptureTheFlag</string>
     <string name="saved_high_score_key">14</string>
+    <string name="ctflogo">CTFLOGO</string>
+    <string name="create_lobby">Create Lobby</string>
+    <string name="join_a_lobby">Join a lobby</string>
 </resources>
