--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="join_a_lobby">Join a lobby</string>
     <string name="game_code">Game code:</string>
     <string name="join">Join</string>
-    <string name="insert_game_code">insert game code</string>
+    <string name="insert_game_code">Insert game code</string>
     <string name="textview">TextView</string>
     <string name="start">Start</string>
     <string name="_1_10">1/10</string>
@@ -131,4 +131,7 @@
     <string name="your_score">Your score</string>
     <string name="name">Name</string>
     <string name="ok">Ok</string>
+    <string name="start_new_game">
+        Start a new game!\n\nChoose if you want create a new lobby or join the lobby of your friend.
+    </string>
 </resources>
