music player started implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="toolbar">CTF</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="profile_fragment">PROFILE FRAGMENT</string>
-    <string name="settings_fragment">SETTINGS FRAGMENT</string>
+    <string name="settings_fragment">JUNIPERO TEAM</string>
     <string name="large_text">
         "GUIDE FRAGMENT.\n\n"
 
