some UI fixed +  help Fragment fully implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,95 +16,84 @@
     <string name="toolbar">CTF</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="profile_fragment">YOUR PROFILE</string>
-    <string name="settings_fragment">JUNIPERO TEAM</string>
+    <string name="settings_fragment">Powered by Junipero Team</string>
     <string name="large_text">
-        "GUIDE FRAGMENT.\n\n"
+        <b>OVERVIEW</b>".\n\n"
+        "The application is based on a review of the game 'Steal Flag', adapting it to Android"
+        "application. The game consists of two teams with challenge to try to steal the flag of the"
+        "enemy team located inside the enemy base and at the same time to defend their flag so that"
+        "it is not taken. The winner is the team that first captures the enemy flag."
+        "The application has been designed to adapt to the times a historical game of popular"
+        "culture. Although we are talking about a game mainly for children the application makes it"
+        "accessible to people of all ages."
+        "Just be equipped with your smartphone to be able to play. The idea was born from the need"
+        "to want to incorporate both physical activity with simplicity and technology, without having"
+        "to rely on the physical tools of the game (flags and forts). In fact, this way you can have"
+        "very large playing fields so that in addition to having fun, you can also do physical"
+        "activity."
+        "The application is based on a technology called 'peer2peer' which, in addition to being"
+        "present in most Andorid devices, also allows the exchange of data (both send and receive)"
+        "between the devices themselves, in order to achieve goals that with a single smartphone"
+        "would not be attainable."
+        "\n\n"
+        <b>Purpose of the game:</b>"\n"
+        "The aim of the game is to capture the flag of the opposing team\n\n"
+        <b>Division of the teams:</b>"\n"
+        "The minimum number of participants to start a game is four players up to a maximum of ten."
+        "Players will be divided into two teams, after being divided by teams, will be assigned roles:"
+        "one keeper per team, which will have the task of keeping the flag safe."
+        "The participants who will not be the keeper will be the stealers, that is, those who try"
+        "to steal the enemy flag.\n\n"
+        <b>Preparation of the playing field:</b>"\n"
+        "Once you start the game the teams will have a minute to move within the playing field trying"
+        "to get as far away as possible. Once the minute is over, the actual game will begin.\n\n"
+        <b>Roles of the players:</b>"\n"
+        <b>Stealer:</b>" Players who play the role stealer will have the task of capturing the flag of the"
+        "opposing team, the flag will be considered taken, when a stealer will enter a radius between"
+        "three and eight meters from the enemy flag, ie the keeper. The stealers will also have the"
+        "task of defending their flag by communicating the position of possible stealers of the"
+        "opposing team. Stealers must not in any way know the identity of the opposing kepper and"
+        "not even its exact location, the only way allowed to go hunting is to know the direction"
+        "to take to approach the flag and how far away they are from it.\n"
+        <b>Keeper:</b>" The Keepers will have to do nothing but escape from the stealers of the opposing"
+        "team and avoid entering a radius between three and eight meters with one of them."
+        "The keepers must not in any case reveal their position on the field or even their role,"
+        "being the key role of the game, not even to the opposing keeper. It is not forbidden the"
+        "meeting between the two keepers that, if it were to happen would not lead to a violation of"
+        "the rules and not even at the end of the game, simply nothing would happen.\n\n"
+        <b>End of the game:</b>"\n"
+        "The game will be considered finished when one of the two teams captures the enemy team’s"
+        "flag. At the end, one team will be considered the winner, while the other will be considered"
+        "the loser."
+        "In the event that the two flags are caught at the same time, the game will be considered"
+        "a draw.\n\n"
+        <b>Cancellation of the game:</b>"\n"
+        "The game will be considered null and void, so you will have to replay if you run into one of"
+        "the following scenarios:\n"
+        "•  Too many players leave the game, that is, when there is no longer the minimum number to"
+        "face a game (four players minimum).\n"
+        "•  When one of the two flags leaves the game voluntarily or unintentionally. In this case,"
+        "one of the two teams will be unable to win and for this the game will have to be cancelled.\n"
+        "•  If the host leaves the game voluntarily or accidentally, in this case as there is no one"
+        "to host the game it will be cancelled.\n"
+        "A player who leaves the game, means the case in which the player leaves the game voluntarily"
+        "or unintentionally, the case in which turns off the device on which he is playing.\n\n"
+        <b>Conduct prohibited by:</b>"\n"
+        "•  It is not possible to follow the opposing team during the preparation phase.\n"
+        "•  It is not possible to turn off the geolocation of your device.\n"
+        "•  It is not possible to turn off the GPS connection and/or the internet connection.\n"
+        "•  It’s forbidden to damage players' devices to take advantage of them.\n"
+        "•  It is forbidden to throw any object in order to harm other players.\n"
+        "•  It’s forbidden to take any kind of motor or pedal to be able to move faster.\n\n"
+        <b>Behaviour not recommended:</b>"\n"
+        "•  It is not recommended to start a game where the phone signal is not optimal.\n"
+        "•  It is not recommended to start a game in closed places or too small to be able to play a"
+        "game in optimal conditions.\n"
+        "•  It is not recommended to start a game with a high transit rate means.\n"
+        "•  It is not recommended to start a game in public places where a certain type of behavior"
+        "and silence is required.\nS"
 
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-
-        "Bold, graphic, intentional.\n\n"
-
-        "The foundational elements of print based design typography, grids, space, scale, color, "
-        "and use of imagery guide visual treatments. These elements do far more than please the "
-        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
-        "imagery, large scale typography, and intentional white space create a bold and graphic "
-        "interface that immerse the user in the experience.\n"
-        "An emphasis on user actions makes core functionality immediately apparent and provides "
-        "waypoints for the user.\n\n"
-
-        "Motion provides meaning.\n\n"
-
-        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
-        "inflection points that initiate motion, transforming the whole design.\n"
-        "All action takes place in a single environment. Objects are presented to the user without "
-        "breaking the continuity of experience even as they transform and reorganize.\n"
-        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
-        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
-
-        "3D world.\n\n"
-
-        "The material environment is a 3D space, which means all objects have x, y, and z "
-        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
-        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
-        "position along the z-axis and has a standard 1dp thickness.\n"
-        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
-        "emulated by manipulating the y-axis.\n\n"
-
-        "Light and shadow.\n\n"
-
-        "Within the material environment, virtual lights illuminate the scene. Key lights create "
-        "directional shadows, while ambient light creates soft shadows from all angles.\n"
-        "Shadows in the material environment are cast by these two light sources. In Android "
-        "development, shadows occur when light sources are blocked by sheets of material at "
-        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
-        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
-
-        "Resting elevation.\n\n"
-
-        "All material objects, regardless of size, have a resting elevation, or default elevation "
-        "that does not change. If an object changes elevation, it should return to its resting "
-        "elevation as soon as possible.\n\n"
-
-        "Component elevations.\n\n"
-
-        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
-        "does not vary from 6dp in one app to 16dp in another app).\n"
-        "Components may have different resting elevations across platforms, depending on the depth "
-        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
-
-        "Responsive elevation and dynamic elevation offsets.\n\n"
-
-        "Some component types have responsive elevation, meaning they change elevation in response "
-        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
-        "changes are consistently implemented using dynamic elevation offsets.\n"
-        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
-        "to the component’s resting state. They ensure that elevation changes are consistent "
-        "across actions and component types. For example, all components that lift on press have "
-        "the same elevation change relative to their resting elevation.\n"
-        "Once the input event is completed or cancelled, the component will return to its resting "
-        "elevation.\n\n"
-
-        "Avoiding elevation interference.\n\n"
-
-        "Components with responsive elevations may encounter other components as they move between "
-        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
-        "through other material, components avoid interfering with one another any number of ways, "
-        "whether on a per component basis or using the entire app layout.\n"
-        "On a component level, components can move or be removed before they cause interference. "
-        "For example, a floating action button (FAB) can disappear or move off screen before a "
-        "user picks up a card, or it can move if a snackbar appears.\n"
-        "On the layout level, design your app layout to minimize opportunities for interference. "
-        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
-        "when a user tries to pick up one of cards.\n\n"
+        "\n\n"
     </string>
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
@@ -143,4 +132,7 @@
     <string name="nickname">Nickname:</string>
     <string name="send">Send</string>
     <string name="send_a_message">Send a message</string>
+    <string name="sound_on_off">Sound ON/OFF</string>
+    <string name="insert_new_nickname">Insert new nickname</string>
+    <string name="change_name">Change name</string>
 </resources>
