Little fixes onBackgound management in CreateGameActivity and JoinGameActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,17 +19,17 @@
     <string name="settings_fragment">Powered by Junipero Team</string>
     <string name="large_text">
         <b>OVERVIEW</b>".\n\n"
-        "The application is based on a review of the game 'Steal Flag', adapting it to Android"
-        "application. The game consists of two teams with challenge to try to steal the flag of the"
-        "enemy team located inside the enemy base and at the same time to defend their flag so that"
+        "The application is based on a reinterpretation of the game 'Steal Flag', adapting it to Android"
+        "application. The game consists of two teams whose challenge is to try to steal the flag of the"
+        "enemy team located inside the enemy base and, at the same time, to defend their flag, so that"
         "it is not taken. The winner is the team that first captures the enemy flag."
-        "The application has been designed to adapt to the times a historical game of popular"
-        "culture. Although we are talking about a game mainly for children the application makes it"
+        "The application has been designed to adapted to these days an historical game of popular"
+        "culture. Although we are talking about a game mainly for children, the application makes it"
         "accessible to people of all ages."
         "Just be equipped with your smartphone to be able to play. The idea was born from the need"
-        "to want to incorporate both physical activity with simplicity and technology, without having"
+        "to want to incorporate both physical activity, with simplicity, and technology, without having"
         "to rely on the physical tools of the game (flags and forts). In fact, this way you can have"
-        "very large playing fields so that in addition to having fun, you can also do physical"
+        "very large playing fields, so that, in addition to having fun, you can also do physical"
         "activity."
         "The application is based on a technology called 'peer2peer' which, in addition to being"
         "present in most Andorid devices, also allows the exchange of data (both send and receive)"
@@ -39,10 +39,10 @@
         <b>Purpose of the game:</b>"\n"
         "The aim of the game is to capture the flag of the opposing team\n\n"
         <b>Division of the teams:</b>"\n"
-        "The minimum number of participants to start a game is four players up to a maximum of ten."
-        "Players will be divided into two teams, after being divided by teams, will be assigned roles:"
+        "The minimum number of participants to start a game is four up to a maximum of ten."
+        "Players will be divided into two teams and, after that, it will be assigned roles:"
         "one keeper per team, which will have the task of keeping the flag safe."
-        "The participants who will not be the keeper will be the stealers, that is, those who try"
+        "The participants who will not be the keeper will be the stealers, that are those who try"
         "to steal the enemy flag.\n\n"
         <b>Preparation of the playing field:</b>"\n"
         "Once you start the game the teams will have a minute to move within the playing field trying"
@@ -66,7 +66,7 @@
         "flag. At the end, one team will be considered the winner, while the other will be considered"
         "the loser."
         "In the event that the two flags are caught at the same time, the game will be considered"
-        "a draw.\n\n"
+        "a tie.\n\n"
         <b>Cancellation of the game:</b>"\n"
         "The game will be considered null and void, so you will have to replay if you run into one of"
         "the following scenarios:\n"
@@ -74,18 +74,18 @@
         "face a game (four players minimum).\n"
         "•  When one of the two flags leaves the game voluntarily or unintentionally. In this case,"
         "one of the two teams will be unable to win and for this the game will have to be cancelled.\n"
-        "•  If the host leaves the game voluntarily or accidentally, in this case as there is no one"
-        "to host the game it will be cancelled.\n"
+        "•  If the host leaves the game voluntarily or accidentally during the preparation fo the game,"
+        "in this case, as there is no one to host the game, it will be cancelled.\n"
         "A player who leaves the game, means the case in which the player leaves the game voluntarily"
-        "or unintentionally, the case in which turns off the device on which he is playing.\n\n"
-        <b>Conduct prohibited by:</b>"\n"
+        "or unintentionally or the case in which turns off the device on which he is playing.\n\n"
+        <b>Behaviours prohibited:</b>"\n"
         "•  It is not possible to follow the opposing team during the preparation phase.\n"
         "•  It is not possible to turn off the geolocation of your device.\n"
         "•  It is not possible to turn off the GPS connection and/or the internet connection.\n"
-        "•  It’s forbidden to damage players' devices to take advantage of them.\n"
+        "•  It is forbidden to damage players' devices to take advantage of them.\n"
         "•  It is forbidden to throw any object in order to harm other players.\n"
-        "•  It’s forbidden to take any kind of motor or pedal to be able to move faster.\n\n"
-        <b>Behaviour not recommended:</b>"\n"
+        "•  It is forbidden to take any kind of motor or pedal to be able to move faster.\n\n"
+        <b>Behaviours not recommended:</b>"\n"
         "•  It is not recommended to start a game where the phone signal is not optimal.\n"
         "•  It is not recommended to start a game in closed places or too small to be able to play a"
         "game in optimal conditions.\n"
